feat(Sagitta_Fig.ipynb): Add Enhance of Different Sparsity Level (with Several Power and Speedup bugs)

--- a/scripts/Voltage-Frequency-Scaling/Sagitta_Fig.ipynb
+++ b/scripts/Voltage-Frequency-Scaling/Sagitta_Fig.ipynb
@@ -2062,7 +2062,93 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Enhance of Different Sparsity Levels\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import sys\n",
+    "sys.path.append('../../Nebula/scripts/')\n",
+    "from cls_plt_fig import cls_plt_fig\n",
+    "\n",
+    "Sel = \"C3D\"\n",
+    "# Sel = \"3D U-Net\"\n",
+    "if Sel == \"C3D\":\n",
+    "    fig_name='../../generate/Enhance_SparsityLevel_C3D.svg'\n",
+    "    Stages  = ['(0%, 0%)','(25%, 25%)','(50%, 50%)', '(75%, 90.8%)', '(97.6%, 90.8%)'] # C3D (weight, activation)\n",
+    "    Power   = [0.2896, 0.271, 0.249, 0.231, 0.229]\n",
+    "    EE      = [0.173, 0.35, 0.70, 2.7, 3.77]\n",
+    "\n",
+    "    Perf    = np.array(EE)*np.array(Power) # follow the density\n",
+    "    Speedup = Perf/Perf[0]\n",
+    "    NEE     = np.array(EE)/EE[0]\n",
+    "    print(\"Performance: \", Perf)\n",
+    "\n",
+    "    len_yticks  = [12, 12]\n",
+    "    y_yticks_max= [24, 24]\n",
+    "else:\n",
+    "    fig_name='../../generate/Enhance_SparsityLevel_3DUNet.svg'\n",
+    "    Stages  = ['(0%, 0%)','(25%, 25%)','(50%, 50%)', '(75%, 98.6%)', '(96.3%, 98.6%)'] # 3D U-Net\n",
+    "    Power   = [0.29, 0.263, 0.2419, 0.219444, 0.219]\n",
+    "    EE      = [0.175, 0.36, 0.75, 3.8444, 4.53]\n",
+    "\n",
+    "    Perf    = np.array(EE)*np.array(Power) # follow the density\n",
+    "    Speedup = Perf/Perf[0]\n",
+    "    NEE     = np.array(EE)/EE[0]\n",
+    "    print(\"Performance: \", Perf)\n",
+    "\n",
+    "    len_yticks   = [10, 10]\n",
+    "    y_yticks_max = [30, 30]\n",
+    "\n",
+    "x_value = np.arange(len(Stages))\n",
+    "\n",
+    "figsize=(7,3)\n",
+    "\n",
+    "bar_width = 0.15\n",
+    "xticks = Stages\n",
+    "legend_loc = (0.15, 0.93)\n",
+    "\n",
+    "y_value = [[Speedup], [NEE]]\n",
+    "y_label = ['Speedup', 'Energy Efficiency Improvement']\n",
+    "y_fig_type = [['bar'], ['bar']]\n",
+    "y_legend = [['Speedup'], ['Energy Efficiency Improvement']]\n",
+    "legend_ncol = 2\n",
+    "y_color=[[(49/255, 101/255, 162/255),(1,1,1)], [(220/255, 103/255, 103/255),(1,1,1)]]\n",
+    "\n",
+    "cls_plt_fig('').func_plt_fig(\n",
+    "    fig_name=fig_name,\n",
+    "    x_value=x_value,\n",
+    "    x_label = \"(Weight Sparsity, Activation Sparsity)\",\n",
+    "    y_label = y_label,\n",
+    "    y_value = y_value,\n",
+    "    y_fig_type = y_fig_type,\n",
+    "    y_legend = y_legend,\n",
+    "    y_color = y_color,\n",
+    "    y_axis_color = [(0/255, 77/255, 144/255), (214/255, 73/255, 73/255)],\n",
+    "    y_yticks_max=y_yticks_max,\n",
+    "    y_yticks_min=[0, 0],\n",
+    "    y_edgecolor = [[(49/255, 101/255, 162/255), (97/255, 169/255, 218/255)],[(220/255, 103/255, 103/255)]],\n",
+    "    # y_hatch = [[None, None],[None, None]],\n",
+    "    # y_linestyle=[['-' for i in range(np.shape(y_value)[1])] for j in range(np.shape(y_value)[0])],\n",
+    "    # y_marker = [[],['s','*']],\n",
+    "    len_yticks=len_yticks,\n",
+    "    xticks= xticks,\n",
+    "    legend_loc =legend_loc,\n",
+    "    legend_columnspacing = 3,\n",
+    "    figsize=figsize,\n",
+    "    font_size = 10,\n",
+    "    plt_text = True,\n",
+    "    plt_text_first = False,\n",
+    "    plt_text_format = '%d',\n",
+    "    legend_ncol=legend_ncol,\n",
+    "    labelrotation = 0,\n",
+    "    bar_width = bar_width,\n",
+    "    linewidth= 2,\n",
+    "    bar_gap_width = 0.1,\n",
+    "    border_width = 0.5\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
